[gd_scene load_steps=3 format=3 uid="uid://bsho0qnnsydva"]

[ext_resource type="Script" path="res://script/Total_Level.gd" id="1_pewdr"]

[sub_resource type="LabelSettings" id="LabelSettings_2gtyx"]
font_size = 70

[node name="Level" type="Node"]

[node name="Input" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_pewdr")

[node name="start" type="ColorRect" parent="Input"]
layout_mode = 0
offset_right = 1146.0
offset_bottom = 646.0
color = Color(0.211765, 0.211765, 0.211765, 1)

[node name="Label" type="Label" parent="Input/start"]
layout_mode = 0
offset_left = 260.0
offset_top = 108.0
offset_right = 881.0
offset_bottom = 204.0
text = "Artillery Game"
label_settings = SubResource("LabelSettings_2gtyx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="Input/start"]
layout_mode = 0
offset_left = 21.0
offset_top = 23.0
offset_right = 86.0
offset_bottom = 54.0
text = "뒤로가기"

[node name="Level1" type="Button" parent="Input/start"]
layout_mode = 0
offset_left = 261.0
offset_top = 338.0
offset_right = 336.0
offset_bottom = 413.0
text = "1"

[node name="Level2" type="Button" parent="Input/start"]
layout_mode = 0
offset_left = 395.0
offset_top = 337.0
offset_right = 470.0
offset_bottom = 412.0
text = "2"

[node name="Level3" type="Button" parent="Input/start"]
layout_mode = 0
offset_left = 531.0
offset_top = 338.0
offset_right = 606.0
offset_bottom = 413.0
text = "3"

[node name="Level4" type="Button" parent="Input/start"]
layout_mode = 0
offset_left = 670.0
offset_top = 337.0
offset_right = 745.0
offset_bottom = 412.0
text = "4"

[node name="Level5" type="Button" parent="Input/start"]
layout_mode = 0
offset_left = 810.0
offset_top = 337.0
offset_right = 885.0
offset_bottom = 412.0
text = "5"

[connection signal="pressed" from="Input/start/BackButton" to="Input" method="_on_back_button_pressed"]
[connection signal="pressed" from="Input/start/Level1" to="Input" method="_on_level_1_pressed"]
[connection signal="pressed" from="Input/start/Level2" to="Input" method="_on_level_2_pressed"]
[connection signal="pressed" from="Input/start/Level3" to="Input" method="_on_level_3_pressed"]
[connection signal="pressed" from="Input/start/Level4" to="Input" method="_on_level_4_pressed"]
[connection signal="pressed" from="Input/start/Level5" to="Input" method="_on_level_5_pressed"]
